Screenshot: fixed alpha channel handling.

* Screenshot always used B_RGBA32 color space, but did not care about the
  alpha channel at all. Now it only uses that space when "includeBorder"
  is used.
* Utility::_MakeTabSpaceTransparent() now also makes sure that the rest
  of the bitmap has the correct alpha channel set. This fixes bug #10491.
* Minor cleanup.